# python-de-deep-learning

./: Chapter_007.ipynb  Chapter_008.ipynb  chapter_002.ipynb  chapter_003.ipynb  chapter_009.ipynb  chapter_010.ipynb  chapter_011.ipynb  chapter_012.ipynb  chapter_013.ipynb  chapter_014.ipynb  chapter_016.ipynb  chapter_018.ipynb  chapter_019.ipynb  pyproject.toml
