[tool.poetry]
name = "python-de-deep-learning"
version = "0.1.0"
description = ""
authors = ["Fukazawa Masaru <upw.ponsuke@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.23.3"
pandas = "^1.5.0"
jupyter = "^1.0.0"
Jinja2 = "^3.1.2"
jupyterhub = "^3.0.0"
nbconvert = "^7.0.0"
h5py = "^3.7.0"
tensorflow-macos = "^2.11.0"
matplotlib = "^3.6.2"
opencv-python = "^4.7.0.68"
scikit-learn = "^1.2.0"
keras = "^2.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
